Add usage endpoint

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,33 +5,19 @@
 
 [metadata]
 name = greenmountainpower
-description = Add a short description here!
+description = An unofficial client for the Green Mountain Power APIs
 author = Kodey Converse
-author_email = kconverse@hubspot.com
+author_email = kodey@conve.rs
 license = MIT
-license_files = LICENSE.txt
-long_description = file: README.rst
-long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
-# Add here related links, for example:
+license_files = LICENSE
+long_description = file: README.md
+long_description_content_type = text/markdown; charset=UTF-8
+url = https://github.com/krconv/greenmountainpower/
 project_urls =
-    Documentation = https://pyscaffold.org/
-#    Source = https://github.com/pyscaffold/pyscaffold/
-#    Changelog = https://pyscaffold.org/en/latest/changelog.html
-#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
-#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
-#    Download = https://pypi.org/project/PyScaffold/#files
-#    Twitter = https://twitter.com/PyScaffold
+    Tracker = https://github.com/krconv/greenmountainpower/issues
 
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
-
-# Add here all kinds of additional classifiers as defined under
-# https://pypi.org/classifiers/
-classifiers =
-    Development Status :: 4 - Beta
-    Programming Language :: Python
-
 
 [options]
 zip_safe = False
@@ -41,14 +27,16 @@ package_dir =
     =src
 
 # Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
+python_requires = >=3.6
 
 # Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
 # Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    importlib-metadata; python_version<"3.8"
+    oauthlib >=3.0,<4.0
+    requests >=2.0,<3.0
+    requests_oauthlib >=1.0,<2.0
 
 
 [options.packages.find]
@@ -62,10 +50,10 @@ exclude =
 # PDF = ReportLab; RXP
 
 # Add here test requirements (semicolon/line-separated)
-testing =
-    setuptools
-    pytest
-    pytest-cov
+# testing =
+#     setuptools
+#     pytest
+#     pytest-cov
 
 [options.entry_points]
 # Add here console scripts like:
@@ -75,8 +63,6 @@ testing =
 # console_scripts =
 #     fibonacci = greenmountainpower.skeleton:run
 # And any other entry points, for example:
-# pyscaffold.cli =
-#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
 [tool:pytest]
 # Specify command line options as you would do when invoking pytest directly.
@@ -84,14 +70,13 @@ testing =
 # in order to write a coverage file that can be read by Jenkins.
 # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
 #          Comment those flags to avoid this pytest issue.
-addopts =
-    --cov greenmountainpower --cov-report term-missing
-    --verbose
-norecursedirs =
-    dist
-    build
-    .tox
-testpaths = tests
+# addopts =
+#     --verbose
+# norecursedirs =
+#     dist
+#     build
+#     .tox
+# testpaths = tests
 # Use pytest markers to select/deselect specific tests
 # markers =
 #     slow: mark tests as slow (deselect with '-m "not slow"')
@@ -115,9 +100,3 @@ exclude =
     dist
     .eggs
     docs/conf.py
-
-[pyscaffold]
-# PyScaffold's parameters when the project was created.
-# This will be used when updating. Do not change!
-version = 4.1.1
-package = greenmountainpower
