--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,8 +5,8 @@
 version: 2
 
 # Build documentation in the docs/ directory with Sphinx
-sphinx:
-  configuration: docs/conf.py
+#sphinx:
+#  configuration: docs/conf.py
 
 # Build documentation with MkDocs
 #mkdocs:
@@ -17,7 +17,7 @@ formats:
   - pdf
 
 python:
-  version: 3.8
+  version: 3.6
   install:
     - requirements: docs/requirements.txt
-    - {path: ., method: pip}
+    - { path: ., method: pip }
