--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,10 @@
+[tool.poetry]
+name = "greenmountainpower"
+version = "0.1.0"
+description = ""
+authors = ["Kodey Converse <kodey@conve.rs>"]
+readme = "README.md"
+
 [build-system]
 requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
 build-backend = "setuptools.build_meta"
