--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "greenmountainpower"
-version = "0.0.3"
-description = ""
-authors = [    "Kodey Converse <kodey@conve.rs>"]
+version = "0.0.4"
+description = "This is an unofficial Python client that uses the undocumented API for Green Mountain Power accounts."
+authors = ["Kodey Converse <kodey@conve.rs>", "Stan Brinkerhoff <stan@vtwireless.com>"]
 readme = "README.md"
 license = "MIT"
 homepage = "https://github.com/sbrinkerhoff/greenmountainpower/"
